--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           cp ${GITHUB_WORKSPACE}/README.md ./build_assets/README.md
           cp ${GITHUB_WORKSPACE}/LICENSE ./build_assets/LICENSE
-          cp ${GITHUB_WORKSPACE}/example/* ./build_assets/
+          cp ${GITHUB_WORKSPACE}/config.json ./build_assets/
       - name: Create ZIP archive
         shell: bash
         run: |
